--- a/app/src/main/res/layout/activity_phone_number_sign_in.xml
+++ b/app/src/main/res/layout/activity_phone_number_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhoneNumberSignInActivity">
+    tools:context=".activities.PhoneNumberSignInActivity">
 
     <com.hbb20.CountryCodePicker
         android:id="@+id/country_code_picker"
